--- a/EllaSciFair/Shared/MainLayout.razor
+++ b/EllaSciFair/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@using EllaSciFair.Pages
+@using EllaSciFair.Models.Dialog
 
 <PageTitle>Ella Science Fair</PageTitle>
 
@@ -14,6 +16,59 @@
 
         <article class="content px-4">
             @Body
+            <Modal @ref="modal">
+                <Title>@Title</Title>
+                <Body>
+                    <p>
+                        @ErrorMessage
+                    </p>
+                </Body>
+                <Footer>
+                    @if (Buttons == DialogButtons.OK)
+                    {
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" @onclick="OnOK">OK</button>
+                    }
+                </Footer>
+            </Modal>
         </article>
     </main>
 </div>
+
+@code {
+
+    private Modal? modal { get; set; }
+    private string? ErrorMessage;
+    private string? Title;
+    private DialogButtons? Buttons;
+    private TaskCompletionSource<string>? CompletionSource;
+    string? activeClass;
+    void OnSidebarCollapse()
+    {
+        if (string.IsNullOrEmpty(activeClass))
+        {
+            activeClass = "active";
+        }
+        else
+        {
+            activeClass = "";
+        }
+    }
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        PubSub.Hub.Default.Subscribe<MsgBoxShowEvent>((MsgBoxShowEvent msg) =>
+        {
+            ErrorMessage = msg.Message;
+            Title = msg.Title;
+            CompletionSource = msg.CompletionSource;
+            Buttons = msg.Buttons;
+            modal?.Open();
+            StateHasChanged();
+        });
+    }
+    public void OnOK()
+    {
+        modal?.Close();
+        CompletionSource?.TrySetResult("OK");
+    }
+} 
