--- a/EllaSciFair/Pages/Main.razor
+++ b/EllaSciFair/Pages/Main.razor
@@ -6,6 +6,7 @@
 <style>
   body {
     background-image: linear-gradient(#e60073, #33f);
+    height: 100vh;
   }
 </style>
 
@@ -68,7 +69,7 @@
         }
         await Task.Delay(1500);
         CurrentPerson.FileName = "done";
-        repoSignUp.Update(CurrentPerson);
+        repoSignUp.Update(CurrentPerson);        
         SignupQueue = repoSignUp?.GetOpenSignUps()?.ToList();
         StateHasChanged();
     }
