--- a/EllaSciFair/Pages/Main.razor
+++ b/EllaSciFair/Pages/Main.razor
@@ -8,6 +8,18 @@
     background-image: linear-gradient(#e60073, #33f);
     height: 100vh;
   }
+  button {
+        border-radius: 25px;
+        color: #fff;
+        border: none;
+        padding: 10px;
+        margin: 10px;
+        font-size: 20px;
+        font-weight: 500;
+        cursor: pointer;
+        background: linear-gradient(-135deg, #c850c0, #4158d0);
+        transition: all 0.3s ease;
+    }
 </style>
 
 @if (CurrentPerson != null)
@@ -17,6 +29,11 @@
         <h1>@CurrentPerson.Name</h1>
         <h1>@CurrentPerson.Id</h1>
         <button @onclick="OnRecordVideo">Start Recording</button>
+        <progress value="@progress" max="100"/>
+        @if (!string.IsNullOrEmpty(CurrentPerson.FileName))
+        {
+            <h1>DONE</h1>
+        }
     </p>
 }
 @if (SignupQueue != null)
@@ -43,6 +60,8 @@
     TakeANumber? takeANumber;
     SignUp? CurrentPerson;
     List<SignUp>? SignupQueue;
+    int progress = 0;
+    bool isRecording;
     protected override void OnAfterRender(bool firstRender)
     {
         SignupQueue = repoSignUp?.GetOpenSignUps()?.ToList();
@@ -59,18 +78,32 @@
         CurrentPerson = signUp;
         takeANumber.CurrentNumber = signUp.Id;
         repoTakeANum.Update(takeANumber);
+        isRecording = false;
         StateHasChanged();
     }
     async void OnRecordVideo() 
     {
+        isRecording = true;
+        progress = 0;
+        StateHasChanged();
         if (CurrentPerson == null)
         {
             return;
         }
-        await Task.Delay(1500);
+
+        //Recording 
+        for (int i = 0; i < 10; i++)
+        {
+            await Task.Delay(150);
+            progress += 10;
+            StateHasChanged();
+        }
+
+
         CurrentPerson.FileName = "done";
         repoSignUp.Update(CurrentPerson);        
         SignupQueue = repoSignUp?.GetOpenSignUps()?.ToList();
+        isRecording = false;
         StateHasChanged();
     }
 }
