don't show progress bar uness running

--- a/EllaSciFair/Pages/Index.razor.css
+++ b/EllaSciFair/Pages/Index.razor.css
@@ -106,7 +106,7 @@
     }
 
     .signForm .content .pass-link {
-        color: "";
+        color: transparent;
     }
 
 .signForm .field input[type="submit"] {
