--- a/EllaSciFair/Pages/Index.razor
+++ b/EllaSciFair/Pages/Index.razor
@@ -15,6 +15,18 @@
     background-image: linear-gradient(#e60073, #33f);
     height: 100vh;
   }
+  button {
+        border-radius: 25px;
+        color: #fff;
+        border: none;
+        padding: 10px;
+        margin: 10px;
+        font-size: 20px;
+        font-weight: 500;
+        cursor: pointer;
+        background: linear-gradient(-135deg, #c850c0, #4158d0);
+        transition: all 0.3s ease;
+    }
 
 </style>
 
