--- a/EllaSciFair/wwwroot/css/site.css
+++ b/EllaSciFair/wwwroot/css/site.css
@@ -62,3 +62,172 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+    body {
+        display: grid;
+        height: 100%;
+        width: 100%;
+        place-items: center;
+        background-image: linear-gradient(#e60073, #33f);
+        height: 100vh;
+      }
+      button {
+            border-radius: 25px;
+            color: #fff;
+            border: none;
+            padding: 10px;
+            margin: 10px;
+            font-size: 20px;
+            font-weight: 500;
+            cursor: pointer;
+            background: linear-gradient(-135deg, #c850c0, #4158d0);
+            transition: all 0.3s ease;
+        }
+
+
+        ::selection {
+            background: #4158d0;
+            color: #fff;
+        }
+        
+        .wrapper {
+            width: 380px;
+            background: #fff;
+            border-radius: 15px;
+            box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+        }
+        
+            .wrapper .title {
+                font-size: 35px;
+                font-weight: 600;
+                text-align: center;
+                line-height: 100px;
+                color: #fff;
+                user-select: none;
+                border-radius: 15px 15px 0 0;
+                background: linear-gradient(-135deg, #c850c0, #4158d0);
+            }
+        
+                .wrapper .signForm .field {
+                    height: 50px;
+                    width: 100%;
+                    margin-top: 20px;
+                    position: relative;
+                }
+        
+                    .wrapper .signForm .field input {
+                        height: 100%;
+                        width: 100%;
+                        outline: none;
+                        font-size: 17px;
+                        padding-left: 20px;
+                        border: 1px solid lightgrey;
+                        border-radius: 25px;
+                        transition: all 0.3s ease;
+                    }
+        
+                        .wrapper .signForm .field input:focus,
+                        .signForm .field input:valid {
+                            border-color: #4158d0;
+                        }
+        
+                    .wrapper .signForm .field label {
+                        position: absolute;
+                        top: 50%;
+                        left: 20px;
+                        color: #999999;
+                        font-weight: 400;
+                        font-size: 17px;
+                        pointer-events: none;
+                        transform: translateY(-50%);
+                        transition: all 0.3s ease;
+                    }
+        
+        .signForm {
+            padding: 10px 30px 50px 30px;
+        }
+        
+        .signForm .field input:focus ~ label,
+        .signForm .field input:valid ~ label {
+            top: 0%;
+            font-size: 16px;
+            color: #4158d0;
+            background: #fff;
+            transform: translateY(-50%);
+        }
+        
+        .signForm .content {
+            display: flex;
+            width: 100%;
+            height: 50px;
+            font-size: 16px;
+            align-items: center;
+            justify-content: space-around;
+        }
+        
+            .signForm .content .checkbox {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        
+            .signForm .content input {
+                width: 15px;
+                height: 15px;
+                background: red;
+            }
+        
+            .signForm .content label {
+                color: #262626;
+                user-select: none;
+                padding-left: 5px;
+            }
+        
+            .signForm .content .pass-link {
+                color: transparent;
+            }
+        
+        .signForm .field input[type="submit"] {
+            color: #fff;
+            border: none;
+            padding-left: 0;
+            margin-top: -10px;
+            font-size: 20px;
+            font-weight: 500;
+            cursor: pointer;
+            background: linear-gradient(-135deg, #c850c0, #4158d0);
+            transition: all 0.3s ease;
+        }
+        
+            .signForm .field input[type="submit"]:active {
+                transform: scale(0.95);
+            }
+        
+        .signForm .signup-link {
+            color: #262626;
+            margin-top: 20px;
+            text-align: center;
+        }
+        
+            .signForm .pass-link a,
+            .signForm .signup-link a {
+                color: #4158d0;
+                text-decoration: none;
+            }
+        
+                .signForm .pass-link a:hover,
+                .signForm .signup-link a:hover {
+                    text-decoration: underline;
+                }
+        
+            .signForm .field input[type="button"] {
+                color: #fff;
+                border: none;
+                padding-left: 0;
+                margin-top: -10px;
+                font-size: 20px;
+                font-weight: 500;
+                cursor: pointer;
+                background: linear-gradient(-135deg, #c850c0, #4158d0);
+                transition: all 0.3s ease;
+            }
