--- a/EllaSciFair/Pages/Index.razor
+++ b/EllaSciFair/Pages/Index.razor
@@ -1,187 +1,74 @@
 @page "/"
 @page "/{MyNumber}"
 @using EllaSciFair.Data
-@using EllaSciFair.Models.Dialog
-@using EllaSciFair.Models.Index
-@using HashidsNet;
+@using EllaSciFair.Models
+@using HashidsNet
 @inject ISignUpRepository repoSignUp
 @inject ITakeANumberRepository repoTakeANum
 @inject NavigationManager navMan
 @inject IJSRuntime JS
 @inject IHashids hashIds
 
-<PageTitle>Ella Science Fair</PageTitle>
+    <PageTitle>Ella Science Fair</PageTitle>
 
     <div class="wrapper">
-      <div class="title">360 Photo Booth</div>
-      <EditForm Model="@formModel" OnValidSubmit="@OnRegister" action="#">
-          <div class="signForm">
+        <div class="title">360 Photo Booth</div>
+        <EditForm Model="@formModel" OnValidSubmit="@OnRegister" action="#">
+            <div class="signForm">
 
-              @if (mySignup != null)
-              {
-                  <div class="field">
-                      <h4>Current Person's Number: @takeANumber?.CurrentNumber</h4>
-                  </div>
-                  @if (string.IsNullOrEmpty(mySignup?.FileName))
-                  {
-                      <h3>Your Number: @mySignup?.Id </h3>
-                  }
-                  else
-                  {
-                      <div>Your Video has been procesed.</div>
-                      <div>Please wait for your email.</div>
-                      <div class="field">
-                          <input type="button" @onclick="DownloadFileFromStream" value="Download">
-                      </div>
-                      <div> @errMsg</div>
-                  }
-              }
-              @if (mySignup == null)
-              {
-                  <div class="field">
-                      <h1>Sign Up</h1>
-                  </div>
-                  <div class="field">
-                      <input type="text" required @bind-value="@formModel.Name">
-                      <label>Name</label>
-                  </div>
-                  <div class="field">
-                      <input type="Email" required @bind-value="@formModel.Email">
-                      <label>Email Address</label>
-                  </div>
+                @if (mySignup != null)
+                {
+                    <div class="field">
+                        <h4>Current Person's Number: @takeANumber?.CurrentNumber</h4>
+                    </div>
+                    @if (string.IsNullOrEmpty(mySignup?.FileName))
+                    {
+                        <h3>Your Number: @mySignup?.Id </h3>
+                    }
+                    else
+                    {
+                        <div>Your Video has been procesed.</div>
+                        <div>Please wait for your email.</div>
+                        <div class="field">
+                            <input type="button" @onclick="DownloadFileFromStream" value="Download">
+                        </div>
+                        <div> @errMsg</div>
+                    }
+                }
+                @if (mySignup == null)
+                {
+                    <div class="field">
+                        <h1>Sign Up</h1>
+                    </div>
+                    <div class="field">
+                        <input type="text" required @bind-value="@formModel.Name">
+                        <label>Name</label>
+                    </div>
+                    <div class="field">
+                        <input type="Email" required @bind-value="@formModel.Email">
+                        <label>Email Address</label>
+                    </div>
 
-                  <div class="field">
-                      <input type="checkbox" @bind-vaue="@formModel.IsPublic" />
-                  </div>
+                    <div class="field">
+                            <input type="checkbox" @bind="@formModel.IsPublic" />
+                        </div>
 
-                  <div class="field">
-                      <input type="submit" value="Register">
-                  </div>
-              }
-              else
-              {
+                    <div class="field">
+                        <input type="submit" value="Register">
+                    </div>
+                }
+                else
+                {
 
-                  <div class="field">
-                      <input type="button" @onclick="OnNewSignup" value="New Sign In">
-                  </div>
+                    <div class="field">
+                        <input type="button" @onclick="OnNewSignup" value="New Sign In">
+                    </div>
 
-                  <div class="field">
-                      <input type="button" @onclick="OnRefresh" value="Refresh">
-                  </div>
-              }
-          </div>
-      </EditForm>
+                    <div class="field">
+                        <input type="button" @onclick="OnRefresh" value="Refresh">
+                    </div>
+                }
+            </div>
+        </EditForm>
     </div>
 
-
-
-@code {
-    IndexFormModel formModel = new IndexFormModel();
-    public SignUp? mySignup;
-    public TakeANumber? takeANumber;
-    public Timer? timer;    
-    public string errMsg;
-
-    private string? myNumber;
-    [Parameter]
-    public string? MyNumber
-    {
-        get { return myNumber; }
-        set
-        {
-            myNumber = value;
-            var rawIds = hashIds.Decode(value);
-            if (rawIds.Length == 0)
-            {
-                int newValue = 0;
-                if (int.TryParse(value, out newValue))
-                {
-                    myNumber = newValue.ToString();
-                }
-                return;
-            }
-            myNumber = rawIds[0].ToString();
-        }
-    }
-    protected override void OnInitialized()
-    {
-
-        errMsg = "";
-        int myNumber = 0;
-        if (int.TryParse(MyNumber, out myNumber))
-        {
-            mySignup = repoSignUp.GetSignUp(myNumber);
-        }
-        takeANumber = repoTakeANum.Get();
-        base.OnInitialized();
-        StateHasChanged();
-    }
-
-    async void OnRegister()
-    {
-        if (string.IsNullOrEmpty(formModel.Email))
-        {
-            await MsgBox.Show("Email is required.", "Error", DialogButtons.OK);
-            return;
-        }
-        if (string.IsNullOrEmpty(formModel.Name))
-        {
-            await MsgBox.Show("Name is required.", "Error", DialogButtons.OK);
-            return;
-        }
-        errMsg = "";
-        var mySignUp = repoSignUp.GetEmailSignup(formModel.Email);
-        if (mySignup != null)
-        {
-            //Found Match
-            StateHasChanged();
-            return;
-        }
-
-        mySignup = new SignUp();
-        mySignup.Email = formModel.Email;
-        mySignup.Name = formModel.Name;
-        mySignup.IsPublic = formModel.IsPublic ?? false;
-        var id = repoSignUp.Add(mySignup);
-        mySignup.Id = id;
-        StateHasChanged();
-    }
-    void OnNewSignup()
-    {
-        mySignup = null;
-        formModel = new IndexFormModel();
-        errMsg = "";
-        StateHasChanged();
-    }
-    void OnRefresh()
-    {
-        if (mySignup?.Id == null)
-        {
-            return;
-        }
-        navMan.NavigateTo($"/{hashIds.Encode(mySignup.Id)}", true);
-    }
-    
-
-    private async Task DownloadFileFromStream()
-    {
-        try 
-        {   
-            using (FileStream fsSource = new FileStream($"/home/pi/Videos/{mySignup?.Id}.mp4",
-                FileMode.Open, FileAccess.Read))
-            {
-                var fileName = $"{mySignup?.Id}.mp4";
-
-                using var streamRef = new DotNetStreamReference(stream: fsSource);
-
-                await JS.InvokeVoidAsync("downloadFileFromStream", fileName, streamRef);
-                errMsg = "Download Complete";
-                StateHasChanged();
-            }
-        } catch (Exception ex)
-        {
-            errMsg = ex.Message;
-            StateHasChanged();
-        }
-    }
-}
